[Layout] Changes fiddioMail to use fiddio logo. Realigns home.html contact section. Fixes misc server side missing console log and grunt file build tasks

--- a/client/css/fiddio.scss
+++ b/client/css/fiddio.scss
@@ -67,6 +67,10 @@ main {
   color: #408E95;
 }
 
+.lightTealText {
+  color: #58E0C5;
+}
+
 .tealBack {
   background-color: #408E95;
 }
